fix: broken style

--- a/src/css/notice.scss
+++ b/src/css/notice.scss
@@ -17,6 +17,6 @@
 @media (max-width: 500px){
     .dplayer-notice {
         top: 10px;
-        bottom: auto;
+        bottom: auto !important;
     }
 }
