--- a/src/css/player.scss
+++ b/src/css/player.scss
@@ -82,12 +82,6 @@
             display: none;
         }
 
-        &.dplayer-no-danmaku.dplayer-no-audio-switching {
-            .dplayer-setting {
-                display: none;
-            }
-        }
-
         .dplayer-setting-box, .dplayer-comment-setting-box {
             bottom: 58px;
             max-height: calc(100% - 58px - 8px);
